// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Диалог для скачивания большой папки => Linux+Chrome 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  onanimationend="function () { [native code] }"
  onclose="function () { [native code] }"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function () { [native code] }"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        description
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => MacOS+Chrome 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  onanimationend="function () { [native code] }"
  onclose="function () { [native code] }"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function () { [native code] }"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionOsHasApp
        <lego-components_link
          classname="download-big-folder-dialog__about-link"
          href="linkAboutApp"
          onclick="function () { [native code] }"
          target="_blank"
          theme="normal"
        >
          linkAboutAppText
        </lego-components_link>
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        iconleft="function iconLeft(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(IconComponent, {
            iconSize: \\"m\\",
            cls: className
          });
        }"
        onclick="function () { [native code] }"
        size="m"
        view="action"
      >
        buttonText
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => Windows+Chrome - схема запускается 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="-1"
    >
      titleTryDownload
    </h2>
    <lego-components_button
      classname="dialog__close"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionTryDownload
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        size="m"
        view="raised"
      >
        buttonTextWindows
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => Windows+Chrome - схема не запускается 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="-1"
    >
      titleTryDownload
    </h2>
    <lego-components_button
      classname="dialog__close"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionNoApp
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        size="m"
        view="action"
      >
        buttonTextWindows
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => Windows+Chrome 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  onanimationend="function () { [native code] }"
  onclose="function () { [native code] }"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      titleTryDownload
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function () { [native code] }"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionTryDownload
        <lego-components_spin
          classname="download-big-folder-dialog__spin"
          progress="true"
          size="xxs"
          view="default"
        />
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        iconleft="function iconLeft(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(IconComponent, {
            iconSize: \\"m\\",
            cls: className
          });
        }"
        onclick="function () { [native code] }"
        size="m"
        view="raised"
      >
        buttonTextWindows
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => Windows+Firefox 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  onanimationend="function () { [native code] }"
  onclose="function () { [native code] }"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function () { [native code] }"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionOsHasApp
        <lego-components_link
          classname="download-big-folder-dialog__about-link"
          href="linkAboutApp"
          onclick="function () { [native code] }"
          target="_blank"
          theme="normal"
        >
          linkAboutAppText
        </lego-components_link>
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        iconleft="function iconLeft(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(IconComponent, {
            iconSize: \\"m\\",
            cls: className
          });
        }"
        onclick="function () { [native code] }"
        size="m"
        view="action"
      >
        buttonTextWindows
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог для скачивания большой папки => Windows+Opera 1`] = `
<lego-components_modal
  classname="dialog download-big-folder-dialog js-prevent-deselect"
  onanimationend="function () { [native code] }"
  onclose="function () { [native code] }"
  theme="normal"
  visible="true"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function () { [native code] }"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="download-big-folder-dialog__description"
      >
        descriptionOsHasApp
        <lego-components_link
          classname="download-big-folder-dialog__about-link"
          href="linkAboutApp"
          onclick="function () { [native code] }"
          target="_blank"
          theme="normal"
        >
          linkAboutAppText
        </lego-components_link>
      </div>
      <lego-components_button
        classname="download-big-folder-dialog__button"
        iconleft="function iconLeft(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(IconComponent, {
            iconSize: \\"m\\",
            cls: className
          });
        }"
        onclick="function () { [native code] }"
        size="m"
        view="action"
      >
        buttonTextWindows
      </lego-components_button>
    </div>
  </div>
</lego-components_modal>
`;
